added toolbar and tabs

--- a/mySite/templates/index.html
+++ b/mySite/templates/index.html
@@ -12,6 +12,15 @@
         <div id="app">
             <v-app>
                 <v-main>
+                    <v-toolbar>
+                        <v-toolbar-title>
+                            DIY TUBE
+                        </v-toolbar-title>
+                    </v-toolbar>
+                    <v-tabs>
+                        <v-tab to="/">Home</v-tab>
+                        <v-tab to="/channels">Channels</v-tab>
+                    </v-tabs>
                     <v-container>
                         <router-view></router-view>
                     </v-container>
