fix url to videos

--- a/mySite/templates/index.html
+++ b/mySite/templates/index.html
@@ -28,8 +28,21 @@
 
         <template id="video-card-template">
             <div>
-                <v-card class="rounded-xl" color="light-purple" height="300px" elevation="2" :href="'video/' + id">
-                    <v-img height="200px" :src="thumbnail"></v-img>
+                <v-card class="rounded-xl" color="light-purple" height="300px" elevation="2" :href="'../../video/' + id">
+                    <v-img height="200px" :src="thumbnail">
+                        <template v-slot:placeholder>
+                            <v-row
+                              class="fill-height ma-0"
+                              align="center"
+                              justify="center"
+                            >
+                            <v-progress-circular
+                              indeterminate
+                              color="grey lighten-5"
+                            ></v-progress-circular>
+                          </v-row>
+                        </template>
+                    </v-img>
                     <v-card-title class="col-11 text-truncate">[[ title ]]</v-card-title>
                     <v-card-text> <v-icon> mdi-calendar </v-icon> [[ date ]] </v-card-text>
                 </v-card>
@@ -42,7 +55,7 @@
                 <div class="my-5">
                     <v-row>
                         {% for video in videos %}
-                        <v-col cols="12" md="4">
+                        <v-col cols="12" sm="6" md="4" lg="3" xl="2">
                             <video-card
                                 id="{{ video.id|safe }}"
                                 thumbnail="{{ video.videoThumbnail|safe }}"
@@ -54,7 +67,7 @@
                     </v-row>
                 </div>
                 <v-row>
-                    <v-col cols="10">
+                    <v-col cols="12" md="10">
                         <v-pagination
                             justify="center"
                             v-model="page"
@@ -63,7 +76,7 @@
                             @input="paginate"
                         ></v-pagination>
                     </v-col>
-                    <v-col cols="2">
+                    <v-col cols="6" md="2">
                         <v-input>
                             <v-text-field
                                 v-model="pageField"
