done channels page

--- a/mySite/templates/channels.html
+++ b/mySite/templates/channels.html
@@ -25,30 +25,90 @@
             </v-app>
         </div>
 
+        <template id="channel-card-template">
+            <div>
+                <v-card class="rounded-xl" height="300px" elevation="2" :href="'../../channel/' + id">
+                    <v-img height="200px" :src="profilepic"></v-img>
+                    <v-card-title class="col-11 text-truncate">[[ name ]]</v-card-title>
+                    <v-card-text v-if="subscribercount != ''"> 
+                        [[ subscribercount ]] subscribers 
+                    </v-card-text>
+                </v-card>
+            </div>
+        </template>
+
         <template id="channels-template">
             <div>
-                <h1>Channels Page</h1>
+                <div>
+                    <h1>Trending Channels</h1>
+                    <v-row class="my-5">
+                        {% for channel in channels %}
+                        <v-col cols="6" md="2">
+                            <channel-card
+                                id="{{ channel.id }}"
+                                profilepic="{{ channel.profilePic }}"
+                                name="{{ channel.name }}"
+                                subscribercount="{{ channel.subscriberCount }}"
+                            ></channel-card>
+                        </v-col>
+                        {% endfor %}
+                    </v-row>
+                </div>
                 <v-row>
-                    {% for channel in channels %}
-                    <v-col cols="1">
-                        <v-img src="{{ channel.profilePic }}"></v-img>
+                    <v-col cols="12" md="10">
+                        <v-pagination
+                            v-model="page"
+                            :length="{{ maxLength }}"
+                            :total-visible="14"
+                            @input="paginate"
+                        ></v-pagination>
                     </v-col>
-                    {% endfor %}
+                    <v-col cols="6" md="2">
+                        <v-input>
+                            <v-text-field
+                                v-model="pageField"
+                                label="Jump to"
+                                outlined
+                                dense
+                                type="number"
+                                @keyup.enter="paginateFromField"
+                            ></v-text-field>
+                        </v-input>
+                    </v-col>
                 </v-row>
             </div>
         </template>
 
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
-        <script src="https://unpkg.com/vue-router@2.0.0/dist/vue-router.js"></script>
         <script src="https://unpkg.com/vuex@2.0.0"></script>
         <script src="https://cdn.jsdelivr.net/npm/vuetify@2.5.5/dist/vuetify.js"></script>
         <script>
+            const ChannelCard = Vue.component('channel-card', {
+                template: '#channel-card-template',
+                delimiters: ['[[', ']]'],
+                props: ['id', 'profilepic', 'name', 'subscribercount'],
+            })
+
             const Channels = Vue.component('channels', {
+                components: {ChannelCard},
                 template: '#channels-template',
+                data() {
+                    return {
+                        page: Number.parseInt("{{ page }}"),
+                        pageField: Number.parseInt("{{ page }}"),
+                    }
+                },
+                methods: {
+                    paginate() {
+                        window.location.href = '/channel/page/' + this.page
+                    },
+                    paginateFromField(page) {
+                        window.location.href = '/channel/page/' + this.pageField
+                    }
+                }
             })
 
             const app = new Vue({
-                Channels,
                 vuetify: new Vuetify(),
             }).$mount('#app');
         </script>
