--- a/mySite/templates/channels.html
+++ b/mySite/templates/channels.html
@@ -27,8 +27,8 @@
 
         <template id="channel-card-template">
             <div>
-                <v-card class="rounded-xl" height="300px" elevation="2" :href="'../../channel/' + id">
-                    <v-img height="200px" :src="profilepic"></v-img>
+                <v-card class="rounded-xl" height="280px" elevation="2" :href="'../../channel/' + id">
+                    <v-img max-height="180px" :src="profilepic"></v-img>
                     <v-card-title class="col-11 text-truncate">[[ name ]]</v-card-title>
                     <v-card-text v-if="subscribercount != ''"> 
                         [[ subscribercount ]] subscribers 
@@ -43,7 +43,7 @@
                     <h1>Trending Channels</h1>
                     <v-row class="my-5">
                         {% for channel in channels %}
-                        <v-col cols="6" md="2">
+                        <v-col cols="6" sm="4" md="2">
                             <channel-card
                                 id="{{ channel.id }}"
                                 profilepic="{{ channel.profilePic }}"
@@ -102,8 +102,12 @@
                     paginate() {
                         window.location.href = '/channel/page/' + this.page
                     },
-                    paginateFromField(page) {
-                        window.location.href = '/channel/page/' + this.pageField
+                    paginateFromField() {
+                        if (this.pageField <= Number.parseInt("{{ maxLength }}")) {
+                            window.location.href = '/channel/page/' + this.pageField
+                        } else {
+                            window.alert("There are only {{ maxLength }} pages!")
+                        }
                     }
                 }
             })
