--- a/mySite/templates/search-result-videos.html
+++ b/mySite/templates/search-result-videos.html
@@ -15,14 +15,16 @@
                             DIY TUBE
                         </v-toolbar-title>
                         <v-spacer></v-spacer>
-                        <v-btn depressed color="white" href="/">Home</v-btn>
+                        <v-btn depressed color="white" href="/">Videos</v-btn>
                         <v-btn depressed color="white" href="/channels">Channels</v-btn>
-                        <v-form method=POST action="/search">
+                        <v-form method="POST" action="/search-videos">
                             {% csrf_token %}
-                            <v-text-field 
+                            <v-text-field
+                                class="mx-3"
                                 name="searched"
                                 style="width:200px"
                                 hide-details
+                                label="Search for videos"
                                 prepend-icon="mdi-magnify"
                                 single-line
                             >
@@ -46,22 +48,10 @@
             </div>
         </template>
 
-        <template id="channel-card-template">
-            <div>
-                <v-card class="rounded-xl" height="280px" elevation="2" :href="'../../channel/' + id">
-                    <v-img max-height="180px" :src="profilepic"></v-img>
-                    <v-card-title class="col-11 text-truncate">[[ name ]]</v-card-title>
-                    <v-card-text v-if="subscribercount != ''"> 
-                        [[ subscribercount ]] subscribers 
-                    </v-card-text>
-                </v-card>
-            </div>
-        </template>
-
         <template id="search-template">
             <div>
                 <h1>You searched for "{{ searched }}" </h1>
-
+                {% if videos %}
                 <h2 class="mt-5">Videos</h2>
                 <div class="my-5">
                     <v-row>
@@ -77,23 +67,7 @@
                         {% endfor %}
                     </v-row>
                 </div>
-
-                <div>
-                    <h2>Channels</h2>
-                    <v-row class="my-5">
-                        {% for channel in channels %}
-                        <v-col cols="6" sm="4" md="2">
-                            <channel-card
-                                id="{{ channel.id }}"
-                                profilepic="{{ channel.profilePic }}"
-                                name="{{ channel.name }}"
-                                subscribercount="{{ channel.subscriberCount }}"
-                            ></channel-card>
-                        </v-col>
-                        {% endfor %}
-                    </v-row>
-                </div>
-                
+                {% endif %}
             </div>
         </template>
 
@@ -101,12 +75,6 @@
         <script src="https://unpkg.com/vuex@2.0.0"></script>
         <script src="https://cdn.jsdelivr.net/npm/vuetify@2.5.5/dist/vuetify.js"></script>
         <script>
-            const ChannelCard = Vue.component('channel-card', {
-                template: '#channel-card-template',
-                delimiters: ['[[', ']]'],
-                props: ['id', 'profilepic', 'name', 'subscribercount'],
-            })
-
             const VideoCard = Vue.component('video-card', {
                 template: '#video-card-template',
                 delimiters: ['[[', ']]'],
@@ -119,7 +87,6 @@
 
             const app = new Vue({
                 components: {
-                    ChannelCard,
                     VideoCard,
                     Search,
                 },
