--- a/mySite/templates/index.html
+++ b/mySite/templates/index.html
@@ -32,7 +32,7 @@
                         </v-form>
                     </v-toolbar>
                     <v-container>
-                        <Home page={{ page }}></Home>
+                        <Home></Home>
                     </v-container>
                 </v-main>
             </v-app>
