--- a/mySite/templates/search-result-videos.html
+++ b/mySite/templates/search-result-videos.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -10,40 +11,15 @@
         <div id="app">
             <v-app>
                 <v-main>
-                    <v-toolbar flat>
-                        <v-spacer></v-spacer>
-                        <v-btn depressed color="white" href="/">Videos</v-btn>
-                        <v-btn depressed color="white" href="/channels">Channels</v-btn>
-                        <v-form method="POST" action="/search-videos">
-                            {% csrf_token %}
-                            <v-text-field
-                                class="mx-3"
-                                name="searched"
-                                style="width:200px"
-                                hide-details
-                                label="Search for videos"
-                                prepend-icon="mdi-magnify"
-                                single-line
-                            >
-                            </v-text-field>
-                        </v-form>
-                    </v-toolbar>
+                    <toolbar searchtype="video">
+                        <span slot="token">{% csrf_token %}</span>
+                    </toolbar>
                     <v-container>
-                        <Search page={{ page }}></Search>
+                        <search-video></search-video>
                     </v-container>
                 </v-main>
             </v-app>
         </div>
-
-        <template id="video-card-template">
-            <div>
-                <v-card class="rounded-xl" height="300px" elevation="2" :href="'../../video/' + id">
-                    <v-img height="200px" :src="thumbnail"></v-img>
-                    <v-card-title class="col-11 text-truncate">[[ title ]]</v-card-title>
-                    <v-card-text> <v-icon> mdi-calendar </v-icon> [[ date ]] </v-card-text>
-                </v-card>
-            </div>
-        </template>
 
         <template id="search-template">
             <div>
@@ -64,6 +40,8 @@
                         {% endfor %}
                     </v-row>
                 </div>
+                {% else %}
+                <h2 class="mt-5">No video found!</h2>
                 {% endif %}
             </div>
         </template>
@@ -71,21 +49,16 @@
         <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
         <script src="https://unpkg.com/vuex@2.0.0"></script>
         <script src="https://cdn.jsdelivr.net/npm/vuetify@2.5.5/dist/vuetify.js"></script>
+        <script src="{% static 'components.js' %}"></script>
         <script>
-            const VideoCard = Vue.component('video-card', {
-                template: '#video-card-template',
-                delimiters: ['[[', ']]'],
-                props: ['id', 'thumbnail', 'title', 'date'],
-            })
-
-            const Search = Vue.component('search', {
+            const SearchVideo = Vue.component('search-video', {
                 template: '#search-template',
             })
 
             const app = new Vue({
                 components: {
                     VideoCard,
-                    Search,
+                    SearchVideo,
                 },
                 vuetify: new Vuetify(),
                 delimiters: ['[[', ']]'],
